update firewall and clear unused file

--- a/socks.conf
+++ b/socks.conf
@@ -1,5 +1,2 @@
-permit c 140.113.*.*
-permit b 150.41.*.*
-permit c 160.15.*.*
-permit b 170.25.*.*
-permit c 180.63.*.*
+permit c 140.113.1.4
+permit b 150.41.3.*
